feat: improve semantic structure in index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 <body>
 
     <main>
-        <h1>Pomodoro</h1>
+        <div class="pomo-container">
+            <h1>Pomodoro</h1>
+            <div>25:00</div>
+            <div class="action-box">
+                <button class="btn btn-primary" id="startBtn">Start</button>
+                <button class="btn btn-warning" id="pauseBtn">Pause</button>
+                <button class="btn btn-secondary" id="resumeBtn">Resume</button>
+                <button class="btn btn-danger" id="resetBtn">Reset</button>
+            </div>
+        </div>
     </main>
 </body>
 </html>
