--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
         <div class="pomo-container">
             <h1>Pomodoro</h1>
-            <div>25:00</div>
+            <div class="timer" id="timer">25:00</div>
             <div class="action-box">
                 <button class="btn btn-primary" id="startBtn">Start</button>
                 <button class="btn btn-warning" id="pauseBtn">Pause</button>
@@ -20,5 +20,7 @@
             </div>
         </div>
     </main>
+
+    <script type="module" src="dist/app/dom.js"></script>
 </body>
 </html>
