--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pomodoro Focus</title>
-    <link rel="stylesheet" href="src/styles/main/style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="src/styles/main/style.css" />
+  </head>
+  <body>
     <main>
-        <div class="pomo-container">
-            <h1>Pomodoro</h1>
-            <div class="timer" id="timer">25:00</div>
-            <div class="action-box">
-                <button class="btn btn-primary" id="startBtn">Start</button>
-                <button class="btn btn-warning" id="pauseBtn">Pause</button>
-                <button class="btn btn-secondary" id="resumeBtn">Resume</button>
-                <button class="btn btn-danger" id="resetBtn">Reset</button>
-            </div>
+      <div class="pomo-container">
+        <h1>Pomodoro</h1>
+        <div class="timer" id="timer">25:00</div>
+        <div class="action-box">
+          <button class="btn btn-primary" id="startBtn">Start</button>
+          <button class="btn btn-warning" id="pauseBtn">Pause</button>
+          <button class="btn btn-secondary" id="resumeBtn">Resume</button>
+          <button class="btn btn-danger" id="resetBtn">Reset</button>
         </div>
+      </div>
     </main>
 
     <script type="module" src="dist/app/dom.js"></script>
-</body>
+  </body>
 </html>
